Added links to the README.

--- a/README
+++ b/README
@@ -2,3 +2,8 @@ This is an attempt to write an Internet-Draft level
 document, setting out the Test Anything Protocol (TAP)
 as a language for storing, recording and summarizing
 automated testing results.
+
+For more details, please see:
+ - http://www.testanything.org/ (TAP website)
+ - http://testanything.org/wiki/index.php/TAP_at_IETF:_Draft_Standard
+ - https://www.ietf.org/mailman/listinfo/tap (mailing list)
